# RayTracer

./: .gitignore  CMakeLists.txt  main.cpp
grammar/: grammar.md  rt.lex  rt.yy
include/: AmbientLight.hpp  Camera.hpp  Color.hpp  Displayer.hpp  ImageDisplayer.hpp  Light.hpp  Matrix.hpp  Object.hpp  Scene.hpp  SceneObject.hpp  Sphere.hpp  SphericalLight.hpp  Vector.hpp  camera.hpp  color.hpp  light.hpp  material.hpp  point_light.hpp  resolution.hpp  scene.hpp  scene_block_object.hpp  sphere.hpp  stb_image.h  stb_image_write.h  syntax_highlighting.hpp  utils.hpp  vector.hpp
include/engine/: ray.hpp  renderer.hpp
include/maths/: matrix.hpp  transform.hpp  utils.hpp  vector.hpp
include/parser/: ambient_light.hpp  anti_aliasing.hpp  box.hpp  camera.hpp  color.hpp  light.hpp  material.hpp  object.hpp  plane.hpp  point_light.hpp  resolution.hpp  scene.hpp  sphere.hpp  triangle.hpp  tuple.hpp  utils.hpp  vector.hpp
scenes/: basic.rt  spheres_and_planes.rt  spheres_and_planes_anti_aliased_16_rays.rt  triangles.rt  two_spheres.rt
src/: main.cc  main.cpp  stb_implementation.c  syntax_highlighting.cc
src/engine/: ray.cc  renderer.cc
src/maths/: matrix.cc  transform.cc  utils.cc  vector.cc
src/parser/: ambient_light.cc  anti_aliasing.cc  camera.cc  color.cc  light.cc  material.cc  object.cc  plane.cc  point_light.cc  resolution.cc  scene.cc  scene_block_object.cc  sphere.cc  triangle.cc  utils.cc  vector.cc
srcs/: AmbientLight.cpp  Camera.cpp  Color.cpp  Displayer.cpp  ImageDisplayer.cpp  Light.cpp  Object.cpp  Scene.cpp  SceneObject.cpp  Sphere.cpp  SphericalLight.cpp
